# sphinx-linkfix

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  README.rst  init_project.sh  pyproject.toml
.github/workflows/: configure_repo.yml
docs/: conf.py  index.rst  installation.rst
src/package_name/: __init__.py
src/sphinx_linkfix/: __init__.py  extension.py
tests/: conftest.py  test_extension.py  test_sphinx_integration.py
tests/package_name/: test_sample.py
